<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="35dp"
        android:layout_gravity="top"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="25dp"
        app:cardPreventCornerOverlap="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent" >
            <RelativeLayout
                android:id="@+id/imageBack"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/back_icon"
                    android:layout_height="25dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_toRightOf="@+id/imageBack"
                android:layout_width="260dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/txtHeader"
                    android:text="Update Address"
                    android:textColor="@color/black"
                    android:textSize= "14sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content" >

            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/address"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editAddress"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:paddingLeft = "10dp"
                android:hint = "@string/address"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/landmark"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editlandmark"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:paddingLeft = "10dp"
                android:hint = "@string/landmark2"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/cityTxt"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#f1ece7"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation= "horizontal">
                <Spinner
                    android:id="@+id/spinnerCity"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/districtTxt"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editDistrict"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:editable = "false"
                android:focusableInTouchMode="false"
                android:paddingLeft = "10dp"
                android:text = "Saharanpur"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/stateTxt"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editState"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:paddingLeft = "10dp"
                android:text = "Uttar Pradesh"
                android:editable = "false"
                android:focusableInTouchMode="false"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/pinCodeTxt"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#f1ece7"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation= "horizontal">
                <Spinner
                    android:id="@+id/spinnerPinCode"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:checked="true"
                android:visibility="invisible"
                android:text="@string/defaultTxt"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:id="@+id/button"
                android:background="@drawable/round_button_shape2"
                android:layout_height="45dp" >
                <TextView
                    android:text="@string/saveAddress"
                    android:textColor="@color/white"
                    android:textSize= "14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
