<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="35dp"
        android:layout_gravity="top"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="25dp"
        app:cardPreventCornerOverlap="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent" >
            <RelativeLayout
                android:id="@+id/imageBack"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/back_icon"
                    android:layout_height="25dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_toRightOf="@+id/imageBack"
                android:layout_width="260dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/txtHeader"
                    android:text="@string/editProfile"
                    android:textColor="@color/black"
                    android:textSize= "14sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content" >

            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/fullName"
                android:textStyle= "bold"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editFullName"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:paddingLeft = "10dp"
                android:hint = "@string/fullName"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/email"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editEmail"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:background="#f1ece7"
                android:textSize= "15sp"
                android:paddingLeft = "10dp"
                android:hint = "@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:layout_height="45dp" />
            <TextView
                android:textColor="@color/dark_grey"
                android:textSize= "14sp"
                android:text="@string/phone"
                android:textStyle= "bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation= "horizontal">
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight=".15"
                    android:background="#f1ece7"
                    android:textSize= "15sp"
                    android:maxLength="10"
                    android:gravity="center"
                    android:editable = "false"
                    android:focusableInTouchMode="false"
                    android:text="+91"
                    android:textColor="@color/black"
                    android:layout_height="45dp" />
                <EditText
                    android:id="@+id/editMobile"
                    android:layout_width="0dp"
                    android:layout_weight=".85"
                    android:background="#f1ece7"
                    android:textSize= "15sp"
                    android:maxLength="10"
                    android:editable = "false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/black"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:id="@+id/button"
                android:background="@drawable/round_button_shape2"
                android:layout_height="45dp" >
                <TextView
                    android:text="@string/updateNow"
                    android:textColor="@color/white"
                    android:textSize= "14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
