<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="35dp"
        android:layout_gravity="top"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="25dp"
        app:cardPreventCornerOverlap="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent" >
            <RelativeLayout
                android:id="@+id/imageBack"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/back_icon"
                    android:layout_height="25dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_toRightOf="@+id/imageBack"
                android:layout_width="260dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/txtHeader"
                    android:text="My Profile"
                    android:textColor="@color/black"
                    android:textSize= "14sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:id="@+id/editProfile"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation= "horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:background="#fff"
                    android:textSize= "15sp"
                    android:gravity="center"
                    android:layout_height="55dp" >
                    <ImageView
                        android:layout_width="30dp"
                        android:gravity="center"
                        android:src="@drawable/edit_icon"
                        android:layout_height="30dp"/>
                </LinearLayout>
                <TextView

                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    android:textSize= "14sp"
                    android:text= "@string/editProfile"
                    android:textColor="@color/black"
                    android:layout_height="55dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editRegister"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation= "horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:background="#fff"
                    android:textSize= "15sp"
                    android:gravity="center"
                    android:layout_height="55dp" >
                    <ImageView
                        android:layout_width="30dp"
                        android:gravity="center"
                        android:src="@drawable/edit_icon"
                        android:layout_height="30dp"/>
                </LinearLayout>
                <TextView

                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    android:textSize= "14sp"
                    android:text= "@string/mechanicRegister"
                    android:textColor="@color/black"
                    android:layout_height="55dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editAddress"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation= "horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:background="#fff"
                    android:textSize= "15sp"
                    android:gravity="center"
                    android:layout_height="55dp" >
                    <ImageView
                        android:layout_width="30dp"
                        android:gravity="center"
                        android:src="@drawable/profile_map"
                        android:layout_height="30dp"/>
                </LinearLayout>
                <TextView

                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    android:textSize= "14sp"
                    android:text= "@string/address"
                    android:textColor="@color/black"
                    android:layout_height="55dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profileLogout"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation= "horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:background="#fff"
                    android:textSize= "15sp"
                    android:gravity="center"
                    android:layout_height="55dp" >
                    <ImageView
                        android:layout_width="30dp"
                        android:gravity="center"
                        android:src="@drawable/profile_logout"
                        android:layout_height="30dp"/>
                </LinearLayout>
                <TextView

                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    android:textSize= "14sp"
                    android:text= "@string/logout"
                    android:textColor="@color/black"
                    android:layout_height="55dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="35dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="25dp"
        app:cardPreventCornerOverlap="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="match_parent" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="68dp"
                    android:id="@+id/viewHome"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="65dp" >
                    <ImageView
                        android:layout_width="25dp"
                        android:src="@drawable/home"
                        android:layout_height="25dp"/>
                    <TextView
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize= "13sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/viewBooking"
                    android:layout_width="68dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="65dp" >
                    <ImageView
                        android:layout_width="25dp"
                        android:src="@drawable/booking"
                        android:layout_height="25dp"/>
                    <TextView
                        android:text="@string/booking"
                        android:textColor="@color/black"
                        android:textSize= "13sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/viewEmergency"
                    android:layout_width="68dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="65dp" >
                    <ImageView
                        android:layout_width="25dp"
                        android:src="@drawable/emergency_footer"
                        android:layout_height="25dp"/>
                    <TextView
                        android:text="@string/emergency"
                        android:textColor="@color/black"
                        android:textSize= "13sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/viewProfile"
                    android:layout_width="68dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="65dp" >
                    <ImageView
                        android:layout_width="25dp"
                        android:src="@drawable/profile_active"
                        android:layout_height="25dp"/>
                    <TextView
                        android:text="@string/profile"
                        android:textColor="@color/colorPrimary"
                        android:textSize= "13sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
